style fixes for edit area and buttons, dark mode compatible

--- a/style/base.css
+++ b/style/base.css
@@ -47,6 +47,14 @@
   padding: 3px;
 }
 
+.template-buttons button {
+  border-radius: 4px;
+}
+
+.template-buttons button:hover {
+  background-color: #cacaca; /* Optional: Hover effect */
+}
+
 .template-content {
   padding: 3px;
 }
@@ -74,8 +82,9 @@
   padding: 10px;
   min-height: 15px;
   resize: none;
-  border: 1px solid transparent;
-  background-color: #f1f1f1;
+  border: 1px solid #b6b6b6;
+  border-radius: 8px;
+  background-color: transparent;
 }
 
 .template-snippet {
